# viki-va

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PROJECT_COMPASS.md  README.md  dev-startup.sh  main.py  pyproject.toml  pytest.ini  requirements.txt  startup.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: changelog.yml  ci.yml  deploy.yml
architecture/: CrossCuttingConcerns.md  overview.md  principles.md
architecture/components/: ActionExecutor.md  BrainLanguageCenter.md  BrainLongTerm.md  BrainPrefrontalCortex.md  BrainShortTerm.md  ConversationLogService.md  InputProcessor.md  OutputManager.md
data_models/: Conversation.md  ConversationContext.md  ConversationTurn.md  LongTermFact.md  LongTermSummary.md  User.md  UserExternalIdentity.md  data_model_memory.drawio  device.md
deployment/: kubernetes_deployment.md  overview.md
docs/diagrams/: va_system_architecture.drawio
docs/diagrams/sequence_diagrams/: va_sequence_background_archival_process_cv_log.drawio  va_sequence_background_ltm_cleanup.drawio  va_sequence_simple_txt_to_llm..drawio
docs/front_end/: overview.md
docs/interaction_flows/: Background Process - Long-Term Memory Management.md  Core Interaction Flow - User Message to VA Response.md  Core Interaction Flow - VA Proactive Message.md
docs/technologies/: stack_choices.md
docs/testing/: strategy_overview.md
project_structure/: overview.md
services/: __init__.py
services/action_executor/src/: action_executor.py
services/action_executor/tests/: test_action_executor.py  test_dummy.py
services/brain/conversation_log/: __init__.py
services/brain/conversation_log/src/: __init__.py  conversation_log.py  conversation_log_interface.py
services/brain/conversation_log/tests/: __init__.py  test_conversation_log.py
services/brain/language_center/nlg/src/: __init__.py  gemini_nlg_service.py  nlg_service_interface.py
services/brain/language_center/nlg/tests/: test_gemini_nlg_service.py
services/brain/language_center/nlu/: README.md
services/brain/language_center/nlu/src/: __init__.py  gemini_nlu_service.py  nlu_service_interface.py
services/brain/language_center/nlu/tests/: test_gemini_nlu_service.py
services/brain/language_center/src/: __init__.py  language_center.py
services/brain/long_term_mem/src/: __init__.py  long_term_memory.py  long_term_memory_interface.py
services/brain/long_term_mem/tests/: __init__.py  test_long_term_memory.py  test_long_term_memory_interface.py
services/brain/pre_forntal_cortex/: __init__.py
services/brain/pre_forntal_cortex/src/: pre_frontal_cortex.py
services/brain/pre_forntal_cortex/tests/: __init__.py  test_pre_frontal_cortex.py
services/brain/short_term_mem/: __init__.py
services/brain/short_term_mem/src/: short_term_memory.py
services/brain/short_term_mem/tests/: __init__.py  test_short_term_memory.py
services/input_processor/: __init__.py
services/input_processor/src/: __init__.py  input_processor.py
services/input_processor/tests/: test_input_processor.py
services/nlu_service/src/: gemini_nlu_service.py  nlu_service_interface.py
services/nlu_service/tests/: test_gemini_nlu_service.py
services/output_manager/src/: output_manager.py  output_manager_interface.py
services/output_manager/tests/: __init__.py  test_output_manager.py
shared_libs/: __init__.py
shared_libs/errors/: __init__.py  errors.py
shared_libs/utils/llm/: response_parser.py
shared_libs/utils/tests/: test_reponse_parser.py
